Add Changes for logo

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -181,3 +181,11 @@ table {
 #delete-confirm:disabled {
   cursor: not-allowed;
 }
+
+.header-brand-img{
+height: 4.5rem!important;
+}
+
+.ml-auto{
+padding-top:16px;
+}
