--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -77,7 +77,7 @@
                 <% end %>
               <% end %>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="http://sujokglobal.com/" target="_blank" rel="noopener">
+              <a class="dropdown-item" href="https://kdmacademy.com/" target="_blank" rel="noopener">
                 <i class="dropdown-icon far fa-question-circle"></i> <%= t("header.dropdown.help") %>
               </a>
               <% if false && Rails.configuration.report_issue_url.present? %>
